<resources>

    <string name="app_name">Hysi</string>
    <string name="app_subtitle">«Have You Seen It?»</string>
    <string name="description">Encuentra objetos que perdiste y ayuda a otros a encontrar lo que perdieron</string>
    <string name="formato_direccion">Calle, provincia</string>

    <!-- Errores varios -->
    <string name="error_calle_no_comprobada">
        No se pudo comprobar que la calle es válida.
        Vuelve a intentarlo más tarde.
    </string>
    <string name="error_calle_no_valida">Calle no válida</string>

    <!-- Textos de la pantalla de login -->
    <string name="login_username">Nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="login_registrate">Regístrate</string>
    <string name="login_error">Nombre de usuario y/o contraseña incorrectos</string>

    <!-- Textos de la pantalla de registro -->
    <string name="registro_titulo">Regístrate en Hysi</string>
    <string name="registro_rep_password">Repite tu contraseña</string>
    <string name="registro_calle">Dirección</string>
    <string name="registro_confirmar">Registrarme</string>
    <string name="registro_ya_tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="registro_login">Iniciar sesión</string>
    <string name="registro_error_usuario_vacio">El nombre de usuario no es válido.</string>
    <string name="registro_error_calle_vacia">Introduzca una calle.</string>
    <string name="registro_error_calle">La calle no existe.</string>
    <string name="registro_error_contrasenia_vacia">La contraseña está en blanco.</string>
    <string name="registro_error_contrasenias">Las contraseñas no coinciden</string>
    <string name="registro_error_usuario_en_uso">
        El nombre de usuario ya está en uso. Elige otro.
    </string>

    <!-- Textos de la actividad principal -->
    <string name="main_lista">Objetos</string>
    <string name="main_mapa">Mapa</string>
    <string name="main_anyadir">Anunciar</string>
    <string name="main_perfil">Mi perfil</string>


    <!-- Textos del fragment lista_objetos -->
    <string name="boton_filtrar">Filtrar</string>
    <string name="boton_filtrar_todo">Ambos filtros</string>

    <!-- Textos del AnuncioActivity-->
    <string name="contactar">Contactar</string>
    <string name="autor">Autor</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria">Categoría</string>
    <string name="loperdien">Lo perdí en</string>
    <string name="dejaren">Dejar en</string>
    <string name="ya_encontrado">Ya encontrado</string>

    <!-- Textos de la pantalla «Añadir anuncio» -->
    <string name="anyadir_anuncio_titulo">Nuevo anuncio</string>
    <string name="anyadir_anuncio_campo_titulo">Título</string>
    <string name="anyadir_anuncio_descripcion">Descripción</string>
    <string name="anyadir_anuncio_lo_perdi_en">¿Dónde lo perdiste?</string>
    <string name="anyadir_anuncio_dejar_en">Dejar en…</string>
    <string name="anyadir_anuncio_categoria">Categoría</string>
    <string name="anyadir_anuncio_anyadir">Crear anuncio</string>

    <!-- Textos perfil usuario -->
    <string name="perfil_email_no_configurado">Email no configurado</string>
    <string name="boton_email">Configurar email</string>
    <string name="boton_lista_objetos">Lista objetos</string>
    <string name="encontrado">Marcar como encontrado</string>
    <string name="anuncio_encontrado">Objeto marcado como encontrado</string>

    <!-- Textos configuracion email -->
    <string name="introducir_email_1">Email</string>
    <string name="introducir_email_2">Confirma tu email</string>
    <string name="boton_email_introducir">Actualizar mi email</string>
    <string name="titulo_email">Configura tu email</string>
    <string name="error_email_vacio">El email está vacío.</string>
    <string name="error_email_no_coincide">Los emails no coinciden.</string>
    <string name="updateEmailCorrecto">Email actualizado</string>

    <!-- Títulos de las actividades -->
    <string name="title_activity_main">Bienvenido a Hysi</string>
    <string name="title_anyadir_anuncio">Crear nuevo anuncio</string>
    <string name="title_activity_mapa">Mapa de objetos</string>


</resources>