<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/outer_padding">

            <TextView
                android:id="@+id/txtTituloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_titulo"
                android:textAlignment="center"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

            <TextView
                android:id="@+id/txtUsuarioRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtTitulo"
                android:text="@string/login_username" />

            <EditText
                android:id="@+id/etUsuarioRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/txtContraseniaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtTitulo"
                android:text="@string/login_password" />

            <EditText
                android:id="@+id/etContraseniaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:password="true"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/txtContraseniaRegistro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtTitulo"
                android:text="@string/registro_rep_password" />

            <EditText
                android:id="@+id/etContraseniaRegistro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:password="true"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/txtContraseniaRegistro3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtTitulo"
                android:text="@string/registro_calle" />

            <EditText
                android:id="@+id/etCalleRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/formato_direccion"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:password="false"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txtDireccionRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registro_confirmar" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

            <TextView
                android:id="@+id/txtYaTienesCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registro_ya_tienes_cuenta" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registro_login" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>