<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearGeneralCorto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:orientation="vertical"
        android:padding="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tTituloCorto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anyadir_anuncio_titulo"
            android:textSize="24sp"
            tools:text="Titulo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tAutorCorto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/autor"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="89dp" />

            <TextView
                android:id="@+id/tCategoriaCorto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/anyadir_anuncio_categoria"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="89dp"
                tools:layout_weight="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/tYaEncontrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/ya_encontrado"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>